Prevent selection of settings button (on click)
It looks ugly on mobile.

--- a/main.css
+++ b/main.css
@@ -71,6 +71,7 @@ img.settings {
     left: 50%;
     margin-left: -32px;
     cursor: pointer;
+    user-select: none;
 }
 
 .settings h1 {
